--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-    "name": "typescript-jasmine-istanbul-boilerplate",
-    "version": "1.0.0",
-    "description": "An example node project to produce coverage of TypeScript sources using Jasmine.",
+    "name": "hexs6",
+    "version": "0.0.1",
+    "description": "# Hexs6 A hex maths library, inspired by [Red Blob Game's excellent articles](http://www.redblobgames.com/grids/hexagons/). Written for use with ES6 and Typescript, everything has been kept functional.",
     "scripts": {
-        "test": "ts-node --lib dom,es2015 node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
-        "test:coverage": "ts-node node_modules/istanbul/lib/cli.js cover -e .ts  -x \"*.d.ts\" -x \"*.spec.ts\" node_modules/jasmine/bin/jasmine.js -- JASMINE_CONFIG_PATH=jasmine.json"
+        "test": "ts-node --lib dom,es2015 node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Izhaki/Typescript-Jasmine-Istanbul-Boilerplate.git"
+        "url": "git+https://github.com/scrapcupcake/hexs6.git"
     },
     "keywords": [
         "typescript",
         "jasmine",
-        "istanbul",
         "sourcemaps",
         "node",
         "npm scripts",
         "tsc"
     ],
-    "author": "Izhaki",
+    "author": "Hunnie Tana",
     "license": "MIT",
     "devDependencies": {
         "@types/jasmine": "^2.5.35",
-        "istanbul": "^1.1.0-alpha.1",
         "jasmine": "^2.5.2",
         "ts-node": "~1.6.0",
         "typescript": "^2.0.3"
     },
     "bugs": {
-        "url": "https://github.com/Izhaki/Typescript-Jasmine-Istanbul-Boilerplate/issues"
+        "url": "https://github.com/scrapcupcake/hexs6/issues"
     },
-    "homepage": "https://github.com/Izhaki/Typescript-Jasmine-Istanbul-Boilerplate#readme"
+    "homepage": "https://github.com/scrapcupcake/hexs6/"
 }
