--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     },
     "include": [
         "src/**/*.ts",
+        "src/**/*.js",
         "node_modules/@types"
     ],
     "exclude": [],
