--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "babel-polyfill": "^6.23.0",
         "babel-preset-env": "^1.5.1",
         "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "jasmine": "^2.5.2",
         "jasmine-core": "^2.6.2",
         "karma": "^1.7.0",
