--- a/package.json
+++ b/package.json
@@ -1,43 +1,62 @@
 {
-    "name": "hexs6",
-    "version": "0.0.11",
-    "description": "# Hexs6 A hex maths library, inspired by [Red Blob Game's excellent articles](http://www.redblobgames.com/grids/hexagons/). Written for use with ES6 and Typescript, everything has been kept functional.",
-    "scripts": {
-        "test": "ts-node --lib dom,es2015 node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
-        "test2": "ts-node --lib dom,es2015 node_modules/.bin/karma"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/scrapcupcake/hexs6.git"
-    },
-    "keywords": [
-        "Hex",
-        "Hexagon"
+  "private": true,
+  "name": "hexs6",
+  "version": "0.0.0",
+  "description": "Hexs6: A hex maths library, inspired by [Red Blob Game's excellent articles](http://www.redblobgames.com/grids/hexagons/). Written in a functional style ES6, transpiled to be useable everywhere.",
+  "homepage": "https://github.io/scrapcupcake/hexs6",
+  "repository": "scrapcupcake/hexs6",
+  "author":     "Hunnie Tana <scrapcupcake@gmail.com>",
+  "contributors": [
+  ],
+  "license": "MIT",
+  "keywords": [],
+  "main": "index.js",
+  "jsnext:main": "index.es.js",
+  "babel": {
+    "presets": [
+      "latest",
+      "stage-0"
     ],
-    "author": "Hunnie Tana",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/jasmine": "^2.5.47",
-        "babel-polyfill": "^6.23.0",
-        "babel-preset-env": "^1.5.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "jasmine": "^2.5.2",
-        "jasmine-core": "^2.6.2",
-        "karma": "^1.7.0",
-        "karma-babel-preprocessor": "^6.0.1",
-        "karma-chrome-launcher": "^2.1.1",
-        "karma-edge-launcher": "^0.4.1",
-        "karma-firefox-launcher": "^1.0.1",
-        "karma-jasmine": "^1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "karma-typescript": "^3.0.2",
-        "karma-typescript-es6-transform": "^1.0.1",
-        "ts-node": "~1.6.0",
-        "typescript": "^2.3.2"
-    },
-    "bugs": {
-        "url": "https://github.com/scrapcupcake/hexs6/issues"
-    },
-    "homepage": "https://github.com/scrapcupcake/hexs6/"
+    "plugins": [
+      "transform-runtime"
+    ]
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": "airbnb-base"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.11.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "chai": "^4.0.0-canary.1",
+    "coveralls": "^2.11.14",
+    "del": "^2.2.2",
+    "eslint": "^3.8.0",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "istanbul": "^1.1.0-alpha.1",
+    "mocha": "^3.1.2",
+    "rollup": "^0.36.3",
+    "rollup-plugin-babel": "^2.6.1",
+    "sinon": "^2.0.0-pre.3"
+  },
+  "scripts": {
+    "lint": "eslint src test tools",
+    "test": "mocha --compilers js:babel-register",
+    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
+    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "build": "node tools/build",
+    "prepublish": "npm run build",
+    "publish:docs": "easystatic deploy docs --repo kriasoft/babel-starter-kit",
+    "start": "easystatic start docs"
+  }
 }
