--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
 coverage
-dist
+# dist # Nope, not while NPM publish is down
 docs/dist
 node_modules
 npm-debug.log
