--- a/package.json
+++ b/package.json
@@ -1,62 +1,29 @@
 {
-  "private": false,
   "name": "hexs6",
-  "version": "0.1.4",
-  "description": "Hexs6: A hex maths library, inspired by [Red Blob Game's excellent articles](http://www.redblobgames.com/grids/hexagons/). Written in a functional style ES6, transpiled to be useable everywhere.",
-  "homepage": "https://github.io/scrapcupcake/hexs6",
-  "repository": "scrapcupcake/hexs6",
-  "author":     "Hunnie Tana <scrapcupcake@gmail.com>",
-  "contributors": [
-  ],
-  "license": "MIT",
-  "keywords": [],
-  "main": "dist/index.js",
-  "jsnext:main": "dist/index.es.js",
-  "babel": {
-    "presets": [
-      "latest",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-runtime"
-    ]
-  },
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "extends": "airbnb-base"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.11.6"
-  },
+  "version": "0.2.0",
+  "main": "dist/hexs6.cjs.js",
+  "module": "dist/hexs6.esm.js",
+  "browser": "dist/hexs6.umd.js",
+  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.16.3",
-    "chai": "^4.0.0-canary.1",
-    "coveralls": "^2.11.14",
-    "del": "^2.2.2",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb-base": "^10.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.1.2",
-    "rollup": "^0.36.3",
-    "rollup-plugin-babel": "^2.6.1",
-    "sinon": "^2.0.0-pre.3"
+    "babel-jest": "^20.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "jest": "^20.0.4",
+    "ms": "^2.0.0",
+    "rollup": "^0.46.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-copy": "^0.2.3",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "scripts": {
-    "lint": "eslint src test tools",
-    "test": "mocha --compilers js:babel-register",
-    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
-    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "node tools/build",
-    "prepublish": "npm run build",
-    "publish:docs": "easystatic deploy docs --repo kriasoft/babel-starter-kit",
-    "start": "easystatic start docs"
-  }
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "test": "jest",
+    "pretest": "npm run build"
+  },
+  "files": [
+    "dist"
+  ]
 }
